# Triobinning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: tests.yml
src/: histogram.ipynb  kmer_finder.cpp  kmer_finder.hpp  kmer_maker.cpp  kmer_maker.hpp  main.cpp  sequence.hpp
tests/: CMakeLists.txt  my_test.cpp
tests/data/: ecoli_mutated_reads.fasta  ecoli_reads.fasta  ecoli_reads.fastq  output.fasta
